@@ -28,6 +28,10 @@ Template: kbd-chooser/no-keyboard
 Type: text
 _Description: No keyboard to configure
 
+Template: kbd-chooser/skip-config
+Type: text
+_Description: Do not configure keyboard; keep kernel keymap
+
 Template: prebaseconfig/progress/kbd-chooser
 Type: text
 # Prebaseconfig progress bar item
