@@ -11,7 +11,11 @@ kbd-chooser (1.19) UNRELEASED; urgency=low
     has known how to deal with this itself since 2002/2003 or so. Patch from
     Matthias Urlichs via Ubuntu.
 
- -- Joey Hess <joeyh@debian.org>  Mon,  8 Aug 2005 15:20:41 -0400
+  [ Frans Pop ]
+  * Show option to skip keyboard configuration and use kernel keymap instead
+    of the "no keyboard" option (closes: #306334).
+
+ -- Frans Pop <fjp@debian.org>  Thu, 22 Sep 2005 14:04:37 +0200
 
 kbd-chooser (1.18) unstable; urgency=low
 
